--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 .DS_Store
 registry-contract/nodeos.log
+registry-contract/build/registry/registry.abi
+registry-contract/build/registry/registry.wasm
